--- a/style.css
+++ b/style.css
@@ -4,8 +4,24 @@ html{
     overflow-y: scroll;
     scroll-behavior: smooth;
     font-size: 16px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+    /*font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;*/
     background-color: rgba(12, 26, 79, 1);
+}
+
+@font-face {
+    font-family: 'Lexend';
+    src: url(fonts/Lexend_Giga\,Space_Mono/);
+}
+
+/*@font-face {
+    font-family: 'Modernist';
+    src: url(fonts/Regular_Weight_Desktop/Sk-Modernist-Regular.otf);
+}*/
+
+html, body {
+    margin: 0;
+    padding: 0;
 }
 
 .hero {
@@ -23,8 +39,6 @@ html{
     position: absolute;
     width: 100%;
     height: 100%;
-    
-    /*background-size: 120px 120px;*/ 
     background-repeat: repeat;
     background-position: 0 0;
     transition: background-image 0.5s ease-in-out;
@@ -43,9 +57,8 @@ html{
     width: 100%;
     height: 100%;
     background-image: inherit; 
-    /*background-size: inherit;*/
     background-repeat: inherit;
-    background-position: 0 40px; 
+    background-position: 0 2.5rem; 
     animation: moveBackgroundReverse 3s ease-in-out infinite; 
     z-index: -1; 
 }
@@ -64,66 +77,47 @@ html{
 
 @keyframes moveBackgroundReverse {
     0% {
-        background-position: 0 0px; /* Top-left corner for alternate rows */
+        background-position: 0 0rem;
     }
     50% {
-        background-position: 20px 0px; /* Move diagonally to the right */
+        background-position: 1.25rem 0rem; 
     }
     100% {
-        background-position: 0 0px;
+        background-position: 0 0rem;
     }
 }
 
 .hero-text-container {
     background: rgba(255, 255, 255, 1);
     padding: 1.5rem; 
-    border-radius: 8px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    border-radius: 50%; 
+    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.2); 
     text-align: center;
-    max-width: 600px;
+    max-width: 37.5rem;
     margin: 0 auto;
     z-index: 1; 
     position: relative; 
-    /*mix-blend-mode: difference;*/
 }
 
 .hero-background-container ::after {
     mix-blend-mode: difference;
 }
 
-/*
 
-@media (max-width: 768px) {
-    .hero-background {
-        background-size: 60px 60px;
-    }
-    .hero-text-container {
-        padding: 1rem;
-        max-width: 90%; 
-    }
-}
-@media (max-width: 480px) {
-    .hero-background {
-        background-size: 40px 40px;
-    }
-}*/
-
-
-h1, h2 {
+.hero h1, h2 {
     color: #333;
     z-index: 1;
     position: relative;
     margin: 3rem;
 }
 
-h1{
+h1 {
+    color: white;
+    position: relative;
+    margin: 0;
+    padding: 5rem;
+    text-align: center;
     font-size: 3rem;
-    color: #333;
-}
-
-h2{
-    font: 3rem;
-    color: #333;
 }
 
 #dynamic-text {
@@ -132,25 +126,12 @@ h2{
 }
 
 
-/*
-#dynamic-image-container {
-    text-align: center;
-    margin-top: 2rem;
-}
-
-#dynamic-image {
-    max-width: 200px;
-    height: auto;
-    display: block;
-    margin: 0 auto;
-}*/
-
 .fade-in {
-    animation: fadeIn 0.5s ease-in forwards; /* Fade-in lasts 0.5s */
+    animation: fadeIn 0.5s ease-in forwards; 
 }
 
 .fade-out {
-    animation: fadeOut 0.5s ease-in forwards; /* Fade-out lasts 0.5s */
+    animation: fadeOut 0.5s ease-in forwards; 
 }
 
 @keyframes fadeIn {
@@ -208,7 +189,7 @@ h2{
 .social-buttons {
     display: flex;
     justify-content: center;
-    gap: 1rem; /* Space between buttons */
+    gap: 1rem; 
     margin-top: 1rem;
 }
 
@@ -216,27 +197,27 @@ h2{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%; /* Makes the button circular */
-    background-color: white; /* Circle color */
-    color: black; /* Icon color */
+    width: 3.125rem;
+    height: 3.125rem;
+    border-radius: 50%; 
+    background-color: white;
+    color: black; 
     text-decoration: none;
-    font-size: 1.5rem; /* Icon size */
+    font-size: 1.5rem; 
     transition: transform 0.3s ease, background-color 0.3s ease;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 
 .social-button:hover {
-    transform: scale(1.1); /* Slight zoom effect on hover */
-    background-color: #ddd; /* Change color on hover */
+    transform: scale(1.1); 
+    background-color: #ddd;
 }
 
 .social-button i {
-    pointer-events: none; /* Prevent the icon from interfering with clicks */
+    pointer-events: none;
 }
 
-/* Individual colors for each social button */
+
 .instagram {
     color: #E4405F;
 }
@@ -256,178 +237,71 @@ h2{
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    width: 80px;
-    height: 80px;
-    border-radius: 50%; /* Makes it circular */
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%; 
     border: none;
-    background-color: white; /* Button background */
-    color: black; /* Button text */
+    background-color: white;
+    color: black; 
     font-size: 1rem;
     font-weight: bold;
     text-transform: uppercase;
     cursor: pointer;
     transition: transform 0.3s ease, background-color 0.3s ease;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.2); 
     z-index: 11;
 }
 
 .about-button:hover {
-    transform: scale(1.1); /* Slight zoom effect on hover */
-    background-color: rgba(12, 26, 79, 1); /* Matches the background color */
+    transform: scale(1.1); 
+    background-color: rgba(12, 26, 79, 1);
     color: white;
 }
 
 
-/*
-.arrow {
-    position: absolute;
-    width: 20px; 
-    height: 60px; 
-    background-color: transparent;
-    z-index: 2;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 1; 
-}
-
-.arrow::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 8px; 
-    height: 60px;
-    background-color: red;
-    transform: translateX(-50%);
-    border-radius: 4px; 
-    transition: height 1s ease-in-out; 
-}
-
-.arrow::after {
-    content: '';
-    position: absolute;
-    top: 60px; 
-    left: 50%;
-    width: 20px; 
-    height: 20px; 
-    background-color: red; 
-    clip-path: polygon(50% 0%, 0% 100%, 100% 100%); 
-    transform: translateX(-50%) rotate(180deg);
-    transition: top 1s ease-in-out; 
-}
-
-
-
-.arrow.animate {
-    opacity: 1;
-    animation: none;
-}
-
-.arrow.animate::before {
-    height: calc(100vh - 120px); 
-}
-
-.arrow.animate::after {
-    top: calc(100vh - 60px); 
-}
-
-@keyframes shootArrow {
-    0% {
-        height: 60px;
-        transform: translate(-50%, -50%); 
-        opacity: 1; 
-    }
-    100% {
-        height: calc(100vh - 120px); 
-        transform: translate(-50%, 0);
-        opacity: 0; 
-    }
-}*/
-/*.arrow-down {
-    position: absolute;
-    bottom: 0; 
-    left: 50%;
-    transform: translateX(-50%);
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-top: 10px solid #4CAF50; 
-    opacity: 0; 
-    height: 0; 
-    transition: opacity 0.3s ease-in-out, height 0.3s ease-in-out; 
-}*/
-/*  
 .center-line-container {
-    position: absolute; 
-    top: 70%; 
-    left: 50%;
-    transform: translate(-50%, -50%); 
-    width: 20px; 
-    height: 100px;
-    overflow: visible;
-    z-index: 10;
-}
-
-svg{
-    width: 20px;
-    height: 20px;
-    transition:height 2s ease;
-    overflow: visible;
-    color:  rgba(12, 26, 79, 1);
-  }
-  svg:hover{
-    height: calc(45vh);
-  }
-
-  line{
-    stroke: white;
-    stroke-width: 8;
-    stroke-linecap: round;
-  }*/
-
-  .center-line-container {
     position: absolute; 
     margin-top: 1rem;
     left: 50%;
-    transform: translate(-50%); /* Center horizontally */
-    width: 20px; /* Fixed width for the line */
-    height: 100vh; /* Initially hidden */
-    overflow: hidden; /* Ensure the line stays contained */
+    transform: translate(-50%); 
+    width: 1.25rem;
+    height: 100vh; 
+    overflow: hidden;
     z-index: 5;
     pointer-events: none;
 }
 
 svg {
-    width: 20px; /* Fixed width for the line */
-    height: 100%; /* Initially hidden */
-    overflow: visible; /* Allow the line to extend dynamically */
+    width: 1.25rem;
+    height: 100%; 
+    overflow: visible; 
 }
 
 
 line {
-    stroke: white; /* Line color */
-    stroke-width: 8; /* Line thickness */
-    stroke-linecap: round; /* Rounded edges for the line */
+    stroke: white; 
+    stroke-width: 8;
+    stroke-linecap: round;
     transition: opacity 0.3s ease;
-    filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
+    filter: drop-shadow(0 0.125rem 0.25rem rgba(0, 0, 0, 0.2));
 }
 
 
 .hamburger-menu {
     position: absolute;
-    top: 20px;
-    left: 20px;
-    width: 30px;
-    height: 25px;
+    top: 1.25rem;
+    left: 1.25rem;
+    width: 1.875rem;
+    height: 1.5625rem;
     cursor: pointer;
     z-index: 10;
 }
 
 .hamburger-menu .bar {
     width: 100%;
-    height: 4px;
+    height: 0.25rem;
     background: white;
-    margin: 4px 0;
+    margin: 0.25rem 0;
     transition: 0.3s;
     stroke-linecap: round;
 }
@@ -436,10 +310,10 @@ line {
     position: fixed;
     top: 0;
     left: -100%;
-    width: 200px;
+    width: 12.5rem;
     height: 200%;
     background-color: rgba(12, 26, 79, 1);
-    padding-top: 60px;
+    padding-top: 3.75rem;
     transition: left 0.3s ease;
     z-index: 9;
 }
@@ -447,16 +321,17 @@ line {
 .nav-menu ul {
     list-style: none;
     padding: 0;
+    text-align: center;
 }
 
 .nav-menu li {
-    margin: 20px 0;
+    margin: 1.25rem 0;
 }
 
 .nav-menu a{
     color: white;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 1.125rem;
 }
 
 .nav-menu.open {
@@ -464,7 +339,7 @@ line {
 }
 
 .hamburger-menu.active .bar:nth-child(1) {
-    transform: rotate(45deg) translate(5px, 5px);
+    transform: rotate(45deg) translate(0.3125rem, 0.3125rem);
 }
 
 .hamburger-menu.active .bar:nth-child(2) {
@@ -472,5 +347,248 @@ line {
 }
 
 .hamburger-menu.active .bar:nth-child(3) {
-    transform: rotate(-45deg) translate(6px, -6px);
+    transform: rotate(-45deg) translate(0.375rem, -0.375rem);
+}
+
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(18.75rem, 1fr));
+    gap: 1.25rem;
+    padding: 1.25rem;
+}
+
+.gallery img {
+    width: 100%;
+    height: 18.75rem; 
+    object-fit: cover; 
+    border-radius: 0.5rem;
+    box-shadow: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+}
+
+.gallery img:hover {
+    transform: scale(1.05);
+}
+
+
+.lightbox {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+.lightbox.show {
+    display: flex;
+    opacity: 1;
+}
+
+.lightbox img {
+    max-width: 90%;
+    max-height: 80%;
+    border-radius: 0.625rem;
+    box-shadow: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
+}
+
+.lightbox .close {
+    position: absolute;
+    top: 1.25rem;
+    right: 1.875rem;
+    font-size: 2.5rem;
+    color: white;
+    cursor: pointer;
+}
+
+.lightbox-navigation {
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.lightbox-navigation span {
+    font-size: 3.125rem;
+    color: white;
+    cursor: pointer;
+    user-select: none;
+}
+
+body.portfolio {
+    background: linear-gradient(180deg, rgba(12, 26, 79, 1), rgb(160, 30, 30));
+    background-size: 200% 200%;
+
+}
+
+.cv img {
+    align-items: center;
+}
+
+
+body.cv {
+    
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.cv-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2.5rem;
+}
+
+.cv-container img {
+    width: 100%;
+    max-width: 37.5rem;
+    height: auto;
+    border-radius: 0.625rem;
+    box-shadow: 0 0.25rem 0.625rem rgba(0, 0, 0, 0.2);
+}
+
+
+.download-btn {
+    display: inline-block;
+    margin-bottom: 5rem;
+    padding: 1rem 2rem;
+    background-color: white;
+    color: #0c1a4f;
+    text-decoration: none;
+    border-radius: 0.3125rem;
+    font-weight: bold;
+    box-shadow: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+}
+
+.download-btn:hover {
+    background-color: #ff6347;
+    color: white;
+}
+
+
+@media (max-width: 48rem) {
+    html {
+        font-size: 14px;
+    }
+
+    .hero {
+        height: 100vh;
+    }
+
+    .hero-text-container {
+        padding: 1rem;
+        max-width: 90%;
+    }
+
+    h1 {
+        font-size: 2.5rem;
+        padding: 2rem;
+    }
+
+    .center-line-container{
+        margin-top: 0.5rem;
+    }
+
+    .about p,
+    .connect p {
+        font-size: 1.2rem;
+        margin: 5rem 1rem;
+    }
+
+    .about-button {
+        width: 3.75rem;
+        height: 3.75rem;
+        font-size: 0.9rem;
+    }
+
+    .gallery img {
+        height: 15.625rem;
+    }
+
+    .cv-container img {
+        max-width: 31.25rem;
+    }
+
+    .download-btn {
+        padding: 0.8rem 1.5rem;
+    }
+}
+
+/* For mobile phones (max-width: 480px) */
+@media (max-width: 30rem) {
+    html {
+        font-size: 12px;
+    }
+
+    .hero {
+        height: 100vh;
+    }
+
+    .hero-text-container {
+        padding: 0.8rem;
+        max-width: 95%;
+    }
+
+    h1 {
+        font-size: 2rem;
+        padding: 1rem;
+    }
+
+    .about p,
+    .connect p {
+        font-size: 1rem;
+        margin: 3rem 0.5rem;
+    }
+
+    .center-line-container{
+        margin-top: 0.4rem;
+    }
+
+    .about-button {
+        width: 3.125rem;
+        height: 3.125rem;
+        font-size: 0.8rem;
+    }
+
+    .gallery img {
+        height: 12.5rem;
+    }
+
+    .cv-container img {
+        max-width: 25rem;
+    }
+
+    .download-btn {
+        padding: 0.6rem 1rem;
+    }
+}
+
+
+.fade-in-page {
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeInAnimation 0.7s ease-out forwards;
+}
+
+@keyframes fadeInAnimation {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
